Train departure table rendering complete. Updated appropriate train departure samples.